--- a/examples/index.html
+++ b/examples/index.html
@@ -11,24 +11,24 @@
     <canvas width="900" height="600" id="graph"></canvas>
     <script src="/pather.min.js" type="module"></script>
     <script type="module">
-        import { Rectangle, Polygon, Curve, Circle } from "./pather.min.js";
+        import { rectangle, polygon, curve, circle } from "./pather.min.js";
 
         const canvas = document.getElementById("graph");
         const ctx = canvas.getContext("2d");
 
-        const rect = new Path2D(Rectangle.Round(300, 300, 200, 100, 20));
+        const rect = new Path2D(rectangle.round(300, 300, 200, 100, 20));
         ctx.stroke(rect);
 
-        const circle1 = new Path2D(Circle.Basic(420, 300, 6));
+        const circle1 = new Path2D(circle.basic(420, 300, 6));
         ctx.stroke(circle1);
 
-        const arrow = new Path2D(Curve.Multi([[420, 300], [520, 460], [720, 300]], 200));
+        const arrow = new Path2D(curve.multi([[420, 300], [520, 460], [720, 300]], 200));
         ctx.stroke(arrow);
 
-        const circle2 = new Path2D(Circle.Basic(720, 300, 6));
+        const circle2 = new Path2D(circle.basic(720, 300, 6));
         ctx.stroke(circle2);
 
-        const polygon = new Path2D(Polygon.Regular(800, 240, 5, 80));
+        const polygon = new Path2D(polygon.regular(800, 240, 5, 80));
         ctx.stroke(polygon);
     </script>
 </body>
